syntax = "proto3";

package stream;

service Consul {
    rpc Subscribe(SubscribeRequest) returns (stream Event) {}
} 

enum Topic {
    ServiceHealth = 0;
}
  
message SubscribeRequest {
    Topic topic = 1;
    string key = 2;
}

message Event {
    Topic topic = 1;
    string key = 2;
    uint64 index = 3;
    ServiceHealthUpdate serviceHealth = 4;
}

enum CatalogOp {
    Register = 0;
    Deregister = 1;
}

message ServiceHealthUpdate {
    CatalogOp op = 1;
    string node = 2;
    string id = 3;
    string address = 4;
    string service = 5;
    int32 port = 6;
    repeated HealthCheck checks = 7;
}

message HealthCheck {
    string name = 1;
    string status = 2;
    string checkID = 3;
    string serviceID = 4;
    string serviceName = 5;
}